--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,5 @@
 language: php
 
-php:
-  - 5.3
-  - 5.4
-  - 5.5
-  - 5.6
-  - 7.0
-  - hhvm
-
 matrix:
   allow_failures:
     - php: 7.0
@@ -16,6 +8,10 @@ matrix:
       dist: precise
     - php: 5.4
       env: 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
+    - php: 5.5
+    - php: 5.6
+    - php: 7.0
+    - php: hhvm
 
 before_script:
   - travis_retry composer self-update
