--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,12 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "omnipay/common": "~2.0"
+        "php": ">=7.2",
+        "omnipay/common": "~3.0"
     },
     "require-dev": {
-        "omnipay/tests": "~2.0"
+        "omnipay/tests": "~3.0",
+        "phpunit/phpunit": "6.5.9"
     },
     "autoload": {
         "psr-4": {
